[package]
name = "ak-codegen"
version = "0.1.1"
authors = ["Michal Hornický <semtexzv@gmail.com>"]
description = "Proc-macros for the ak library"
license = "MIT"
edition = "2018"
repository = "https://github.com/semtexzv/ak"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.5"
syn = { version =  "1.0.5", features = ["full", "visit-mut"] }
darling = "0.10.1"
quote = { version = "1.0.2", default-features = false }