[package]
name = "ak-rt"
version = "0.1.1"
authors = ["Michal Hornický <semtexzv@gmail.com>"]
description = "Runtime for the ak library"
license = "MIT"
edition = "2018"
repository = "https://github.com/semtexzv/ak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-executor = "0.2.0-alpha.6"
tokio = { version = "0.2.0-alpha.6"}